--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -1,7 +1,7 @@
 FROM nginxinc/nginx-unprivileged:1-alpine
 LABEL maintainer="https://github.com/hal-alex"
 
-COPY ./default.conf.tpl /etc/nginx/defaul.conf.tpl
+COPY ./default.conf.tpl /etc/nginx/default.conf.tpl
 COPY ./uwsgi_params /etc/nginx/uwsgi_params
 COPY ./run.sh /run.sh
 
